# learn_gmock

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  sample_test
src/: mylib.cpp  mylib.h
test/: sample_test.cpp
